# visgen_graph

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: shader2d.rs  wgpu.rs
examples/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
shader_src/: clouds.frag  color_ramp.frag  fader.frag  masking.frag  perlin.frag  shader.frag  wave.frag
src/: fragment_node.rs  lib.rs  main.rs  osc_convert.rs  parameter.rs  shader2d_target.rs  shader_target.rs  shapes.rs  shapes2d.rs  texture_node.rs  texture_target.rs  texture_tree.rs
src/combiner/: fader_node.rs  masking_node.rs  shader_combiner.rs  texture_add.rs
src/effects/: color_ramp.rs
src/generators/: circles.rs  clouds.rs  perlin.rs  stripes.rs  wave.rs
src/program/: program.rs
src/shaders/: frag.spv  minimal2d.vert  minimal2d_vert.spv  shader.vert  vert.spv  wave.frag  wave_frag.spv
src/util/: ndi_stream.rs  shader.rs
tests/: parameter_test.rs
tool/osc/: Circle_Generator.json  ColorRamp_Effect.json  Fade_Simple.json  Mask.json  OpenStageControl_Project.json  Perlin_Generator.json  Programming_Panel.json  Stripe_Generator.json  Wave_Generator.json
