[package]
name = "visgen_graph"
version = "0.1.0"
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "force-build"
path = "build.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
indextree = "4.3.1"
nannou = "0.17.1"
nannou_osc = "0.17.0"
wgpu = "0.9.0"
wgpu-types = "0.9.0"