[package]
name = "visgen_graph"
version = "0.1.0"
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "force-build"
path = "build.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
indextree = "4.3.1"
nannou = {version = "0.18.1", features = ["spirv"] }
nannou_osc = "0.18.0"
wgpu = { version = "0.11.1",  features = ["spirv"] }
wgpu-types = "0.11.0"
rand = "0.8.4"
ndi = { git = "https://github.com/revilo196/ndi-rs.git", branch = "sending" }
image = "0.23"
crossbeam = "0.8"

[workspace]
# Required for wgpu v0.10 feature resolution.
resolver = "2"